--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -140,9 +140,6 @@ jobs:
           autoCreateTestCases="true"
           echo "Uploading test results to Zephyr Scale..."
           curl -H "Authorization: Bearer ${{ secrets.JIRA_ZEPHYR_SCALE_BEARER_TOKEN }}" -F "file=$xmlPath;type=application/xml" "$zephyrBaseUrl/junit?projectKey=$projectKey&autoCreateTestCases=$autoCreateTestCases"
-
-      - name: DEBUG Results to Zephyr Scale 🚀
-          run: |
-            cd app/build/outputs/androidTests-results/connected/
-            ls
-            pwd
+          echo $xmlPath
+          cd $xmlPath
+          ls
